// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`jobTime returns correct time properties for the \`ACCEPTED\` state 1`] = `
Object {
  "from": 2016-10-05T04:57:46.920Z,
}
`;

exports[`jobTime returns correct time properties for the \`ACCEPTED\` state 2`] = `Object {}`;

exports[`jobTime returns correct time properties for the \`ACCEPTED\` state 3`] = `Object {}`;

exports[`jobTime returns correct time properties for the \`ASSIGNED\` state 1`] = `
Object {
  "from": 2016-10-05T04:57:46.920Z,
}
`;

exports[`jobTime returns correct time properties for the \`ASSIGNED\` state 2`] = `Object {}`;

exports[`jobTime returns correct time properties for the \`ASSIGNED\` state 3`] = `Object {}`;

exports[`jobTime returns correct time properties for the \`BLOCKED_FAILED\` state 1`] = `
Object {
  "from": 2016-10-05T04:57:46.920Z,
}
`;

exports[`jobTime returns correct time properties for the \`BLOCKED_FAILED\` state 2`] = `Object {}`;

exports[`jobTime returns correct time properties for the \`BLOCKED_FAILED\` state 3`] = `Object {}`;

exports[`jobTime returns correct time properties for the \`BLOCKED\` state 1`] = `
Object {
  "from": 2016-10-05T04:57:46.920Z,
}
`;

exports[`jobTime returns correct time properties for the \`BLOCKED\` state 2`] = `Object {}`;

exports[`jobTime returns correct time properties for the \`BLOCKED\` state 3`] = `Object {}`;

exports[`jobTime returns correct time properties for the \`BROKEN\` state 1`] = `
Object {
  "from": 2016-10-05T04:57:46.920Z,
}
`;

exports[`jobTime returns correct time properties for the \`BROKEN\` state 2`] = `Object {}`;

exports[`jobTime returns correct time properties for the \`BROKEN\` state 3`] = `Object {}`;

exports[`jobTime returns correct time properties for the \`CANCELED\` state 1`] = `
Object {
  "from": 2016-10-05T04:57:46.920Z,
  "to": 2016-10-05T04:57:47.000Z,
}
`;

exports[`jobTime returns correct time properties for the \`CANCELED\` state 2`] = `Object {}`;

exports[`jobTime returns correct time properties for the \`CANCELED\` state 3`] = `Object {}`;

exports[`jobTime returns correct time properties for the \`CANCELING\` state 1`] = `
Object {
  "from": 2016-10-05T04:57:46.920Z,
  "to": 2016-10-05T04:57:47.000Z,
}
`;

exports[`jobTime returns correct time properties for the \`CANCELING\` state 2`] = `Object {}`;

exports[`jobTime returns correct time properties for the \`CANCELING\` state 3`] = `Object {}`;

exports[`jobTime returns correct time properties for the \`FINISHED\` state 1`] = `
Object {
  "from": 2016-10-05T04:57:46.920Z,
  "to": 2016-10-05T04:57:47.000Z,
}
`;

exports[`jobTime returns correct time properties for the \`FINISHED\` state 2`] = `Object {}`;

exports[`jobTime returns correct time properties for the \`FINISHED\` state 3`] = `Object {}`;

exports[`jobTime returns correct time properties for the \`PENDING\` state 1`] = `
Object {
  "from": 2016-10-05T04:57:46.920Z,
}
`;

exports[`jobTime returns correct time properties for the \`PENDING\` state 2`] = `Object {}`;

exports[`jobTime returns correct time properties for the \`PENDING\` state 3`] = `Object {}`;

exports[`jobTime returns correct time properties for the \`RUNNING\` state 1`] = `
Object {
  "from": 2016-10-05T04:57:46.920Z,
}
`;

exports[`jobTime returns correct time properties for the \`RUNNING\` state 2`] = `Object {}`;

exports[`jobTime returns correct time properties for the \`RUNNING\` state 3`] = `Object {}`;

exports[`jobTime returns correct time properties for the \`SCHEDULED\` state 1`] = `
Object {
  "from": 2016-10-05T04:57:46.920Z,
}
`;

exports[`jobTime returns correct time properties for the \`SCHEDULED\` state 2`] = `Object {}`;

exports[`jobTime returns correct time properties for the \`SCHEDULED\` state 3`] = `Object {}`;

exports[`jobTime returns correct time properties for the \`SKIPPED\` state 1`] = `
Object {
  "from": 2016-10-05T04:57:46.920Z,
}
`;

exports[`jobTime returns correct time properties for the \`SKIPPED\` state 2`] = `Object {}`;

exports[`jobTime returns correct time properties for the \`SKIPPED\` state 3`] = `Object {}`;

exports[`jobTime returns correct time properties for the \`TIMED_OUT\` state 1`] = `
Object {
  "from": 2016-10-05T04:57:46.920Z,
  "to": 2016-10-05T05:14:26.920Z,
}
`;

exports[`jobTime returns correct time properties for the \`TIMED_OUT\` state 2`] = `Object {}`;

exports[`jobTime returns correct time properties for the \`TIMED_OUT\` state 3`] = `Object {}`;

exports[`jobTime returns correct time properties for the \`TIMING_OUT\` state 1`] = `
Object {
  "from": 2016-10-05T04:57:46.920Z,
  "to": 2016-10-05T05:14:26.920Z,
}
`;

exports[`jobTime returns correct time properties for the \`TIMING_OUT\` state 2`] = `Object {}`;

exports[`jobTime returns correct time properties for the \`TIMING_OUT\` state 3`] = `Object {}`;

exports[`jobTime returns correct time properties for the \`UNBLOCKED_FAILED\` state 1`] = `
Object {
  "from": 2016-10-05T04:57:46.920Z,
}
`;

exports[`jobTime returns correct time properties for the \`UNBLOCKED_FAILED\` state 2`] = `Object {}`;

exports[`jobTime returns correct time properties for the \`UNBLOCKED_FAILED\` state 3`] = `Object {}`;

exports[`jobTime returns correct time properties for the \`UNBLOCKED\` state 1`] = `
Object {
  "from": 2016-10-05T04:57:46.920Z,
}
`;

exports[`jobTime returns correct time properties for the \`UNBLOCKED\` state 2`] = `Object {}`;

exports[`jobTime returns correct time properties for the \`UNBLOCKED\` state 3`] = `Object {}`;

exports[`jobTime returns correct time properties for the \`WAITING_FAILED\` state 1`] = `
Object {
  "from": 2016-10-05T04:57:46.920Z,
}
`;

exports[`jobTime returns correct time properties for the \`WAITING_FAILED\` state 2`] = `Object {}`;

exports[`jobTime returns correct time properties for the \`WAITING_FAILED\` state 3`] = `Object {}`;

exports[`jobTime returns correct time properties for the \`WAITING\` state 1`] = `
Object {
  "from": 2016-10-05T04:57:46.920Z,
}
`;

exports[`jobTime returns correct time properties for the \`WAITING\` state 2`] = `Object {}`;

exports[`jobTime returns correct time properties for the \`WAITING\` state 3`] = `Object {}`;

exports[`jobWaitTime returns correct time properties for the \`ACCEPTED\` state 1`] = `
Object {
  "from": "2017-10-29T00:32:23.479Z",
  "to": "2017-10-29T00:34:37.000Z",
}
`;

exports[`jobWaitTime returns correct time properties for the \`ACCEPTED\` state 2`] = `
Object {
  "from": "2017-10-29T00:32:23.479Z",
}
`;

exports[`jobWaitTime returns correct time properties for the \`ASSIGNED\` state 1`] = `
Object {
  "from": "2017-10-29T00:32:23.479Z",
  "to": "2017-10-29T00:34:37.000Z",
}
`;

exports[`jobWaitTime returns correct time properties for the \`ASSIGNED\` state 2`] = `
Object {
  "from": "2017-10-29T00:32:23.479Z",
}
`;

exports[`jobWaitTime returns correct time properties for the \`BLOCKED_FAILED\` state 1`] = `
Object {
  "from": "2017-10-29T00:32:23.479Z",
  "to": "2017-10-29T00:34:37.000Z",
}
`;

exports[`jobWaitTime returns correct time properties for the \`BLOCKED_FAILED\` state 2`] = `
Object {
  "from": "2017-10-29T00:32:23.479Z",
}
`;

exports[`jobWaitTime returns correct time properties for the \`BLOCKED\` state 1`] = `Object {}`;

exports[`jobWaitTime returns correct time properties for the \`BLOCKED\` state 2`] = `Object {}`;

exports[`jobWaitTime returns correct time properties for the \`BROKEN\` state 1`] = `
Object {
  "from": "2017-10-29T00:32:23.479Z",
  "to": "2017-10-29T00:34:37.000Z",
}
`;

exports[`jobWaitTime returns correct time properties for the \`BROKEN\` state 2`] = `
Object {
  "from": "2017-10-29T00:32:23.479Z",
}
`;

exports[`jobWaitTime returns correct time properties for the \`CANCELED\` state 1`] = `
Object {
  "from": "2017-10-29T00:32:23.479Z",
  "to": "2017-10-29T00:34:37.000Z",
}
`;

exports[`jobWaitTime returns correct time properties for the \`CANCELED\` state 2`] = `
Object {
  "from": "2017-10-29T00:32:23.479Z",
}
`;

exports[`jobWaitTime returns correct time properties for the \`CANCELING\` state 1`] = `
Object {
  "from": "2017-10-29T00:32:23.479Z",
  "to": "2017-10-29T00:34:37.000Z",
}
`;

exports[`jobWaitTime returns correct time properties for the \`CANCELING\` state 2`] = `
Object {
  "from": "2017-10-29T00:32:23.479Z",
}
`;

exports[`jobWaitTime returns correct time properties for the \`FINISHED\` state 1`] = `
Object {
  "from": "2017-10-29T00:32:23.479Z",
  "to": "2017-10-29T00:34:37.000Z",
}
`;

exports[`jobWaitTime returns correct time properties for the \`FINISHED\` state 2`] = `
Object {
  "from": "2017-10-29T00:32:23.479Z",
}
`;

exports[`jobWaitTime returns correct time properties for the \`PENDING\` state 1`] = `
Object {
  "from": "2017-10-29T00:32:23.479Z",
  "to": "2017-10-29T00:34:37.000Z",
}
`;

exports[`jobWaitTime returns correct time properties for the \`PENDING\` state 2`] = `
Object {
  "from": "2017-10-29T00:32:23.479Z",
}
`;

exports[`jobWaitTime returns correct time properties for the \`RUNNING\` state 1`] = `
Object {
  "from": "2017-10-29T00:32:23.479Z",
  "to": "2017-10-29T00:34:37.000Z",
}
`;

exports[`jobWaitTime returns correct time properties for the \`RUNNING\` state 2`] = `
Object {
  "from": "2017-10-29T00:32:23.479Z",
}
`;

exports[`jobWaitTime returns correct time properties for the \`SCHEDULED\` state 1`] = `
Object {
  "from": "2017-10-29T00:32:23.479Z",
  "to": "2017-10-29T00:34:37.000Z",
}
`;

exports[`jobWaitTime returns correct time properties for the \`SCHEDULED\` state 2`] = `
Object {
  "from": "2017-10-29T00:32:23.479Z",
}
`;

exports[`jobWaitTime returns correct time properties for the \`SKIPPED\` state 1`] = `
Object {
  "from": "2017-10-29T00:32:23.479Z",
  "to": "2017-10-29T00:34:37.000Z",
}
`;

exports[`jobWaitTime returns correct time properties for the \`SKIPPED\` state 2`] = `
Object {
  "from": "2017-10-29T00:32:23.479Z",
}
`;

exports[`jobWaitTime returns correct time properties for the \`TIMED_OUT\` state 1`] = `
Object {
  "from": "2017-10-29T00:32:23.479Z",
  "to": "2017-10-29T00:34:37.000Z",
}
`;

exports[`jobWaitTime returns correct time properties for the \`TIMED_OUT\` state 2`] = `
Object {
  "from": "2017-10-29T00:32:23.479Z",
}
`;

exports[`jobWaitTime returns correct time properties for the \`TIMING_OUT\` state 1`] = `
Object {
  "from": "2017-10-29T00:32:23.479Z",
  "to": "2017-10-29T00:34:37.000Z",
}
`;

exports[`jobWaitTime returns correct time properties for the \`TIMING_OUT\` state 2`] = `
Object {
  "from": "2017-10-29T00:32:23.479Z",
}
`;

exports[`jobWaitTime returns correct time properties for the \`UNBLOCKED_FAILED\` state 1`] = `
Object {
  "from": "2017-10-29T00:32:23.479Z",
  "to": "2017-10-29T00:34:37.000Z",
}
`;

exports[`jobWaitTime returns correct time properties for the \`UNBLOCKED_FAILED\` state 2`] = `
Object {
  "from": "2017-10-29T00:32:23.479Z",
}
`;

exports[`jobWaitTime returns correct time properties for the \`UNBLOCKED\` state 1`] = `
Object {
  "from": "2017-10-29T00:32:23.479Z",
  "to": "2017-10-29T00:34:37.000Z",
}
`;

exports[`jobWaitTime returns correct time properties for the \`UNBLOCKED\` state 2`] = `
Object {
  "from": "2017-10-29T00:32:23.479Z",
}
`;

exports[`jobWaitTime returns correct time properties for the \`WAITING_FAILED\` state 1`] = `
Object {
  "from": "2017-10-29T00:32:23.479Z",
  "to": "2017-10-29T00:34:37.000Z",
}
`;

exports[`jobWaitTime returns correct time properties for the \`WAITING_FAILED\` state 2`] = `
Object {
  "from": "2017-10-29T00:32:23.479Z",
}
`;

exports[`jobWaitTime returns correct time properties for the \`WAITING\` state 1`] = `
Object {
  "from": "2017-10-29T00:32:23.479Z",
  "to": "2017-10-29T00:34:37.000Z",
}
`;

exports[`jobWaitTime returns correct time properties for the \`WAITING\` state 2`] = `
Object {
  "from": "2017-10-29T00:32:23.479Z",
}
`;
